# condition-extractor

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/services/: ai_service.py  hcc_service.py
