[project]
name = "condition-extractor"
version = "0.1.0"
description = "AI pipeline for extracting HCC conditions"
authors = [
    {name = "Oscar Corona oabc4004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
